# rustykrab

./: .gitignore  APPLY_PATCH.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DREAMING.md  INTEL_MAC_HELPER.md  MEMORY_ARCHITECTURE.md  Makefile  README.md  SECURITY_ANALYSIS.md  SECURITY_AUDIT_2.md  SKILLS_ISSUES.md  entitlements.plist
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
audit/: 01-critical.md  02-security.md  03-bugs-core-agent.md  04-bugs-gateway-providers.md  05-bugs-tools-memory-skills.md  06-dead-code-and-stubs.md  07-tooling-and-build.md  08-positives.md  README.md
crates/openclaw-agent/: Cargo.toml
crates/openclaw-agent/src/: harness.rs  lib.rs  router.rs  runner.rs  sandbox.rs  trace.rs
crates/openclaw-agent/src/orchestrator/: decomposer.rs  executor.rs  mod.rs  pipeline.rs  refiner.rs  synthesizer.rs  verifier.rs
crates/openclaw-agent/src/rlm/: context_manager.rs  mod.rs  recursive_call.rs
crates/openclaw-channels/: Cargo.toml
crates/openclaw-channels/src/: lib.rs  signal.rs  telegram.rs
crates/openclaw-cli/: Cargo.toml
crates/openclaw-cli/src/: main.rs
crates/openclaw-core/src/: capability.rs  error.rs  lib.rs  orchestration.rs  types.rs
crates/openclaw-gateway/: Cargo.toml
crates/openclaw-gateway/src/: auth.rs  lib.rs  orchestrate.rs  rate_limit.rs  routes.rs  signal_webhook.rs  state.rs  telegram_webhook.rs  ws.rs
crates/openclaw-gateway/static/: index.html
crates/openclaw-providers/: Cargo.toml
crates/openclaw-providers/src/: anthropic.rs  claude_cli.rs  lib.rs  ollama.rs
crates/openclaw-skills/: Cargo.toml
crates/openclaw-skills/src/: lib.rs  loader.rs  prompt.rs  skill.rs  skill_md.rs
crates/openclaw-store/: Cargo.toml
crates/openclaw-store/src/: conversation.rs  keychain.rs  knowledge_graph.rs  lib.rs  memory.rs  secret.rs
crates/openclaw-tools/: Cargo.toml
crates/openclaw-tools/src/: agents_list.rs  apply_patch.rs  browser.rs  canvas.rs  code_execution.rs  credential_read.rs  credential_write.rs  cron.rs  cron_backend.rs  edit.rs  exec.rs  gateway.rs  gateway_backend.rs  gmail.rs  http_request.rs  http_session.rs  image.rs  image_generate.rs  lib.rs  memory_backend.rs  memory_delete.rs  memory_get.rs  memory_save.rs  memory_search.rs  message.rs  message_backend.rs  nodes.rs  pdf.rs  process.rs  read.rs  security.rs  session_manager.rs  session_status.rs  sessions_history.rs  sessions_list.rs  sessions_send.rs  sessions_spawn.rs  sessions_yield.rs  skill_create.rs  spreadsheet.rs  (+6 more)
crates/rustykrab-agent/: Cargo.toml
crates/rustykrab-agent/src/: harness.rs  lib.rs  recall_tools.rs  router.rs  runner.rs  sandbox.rs  subagent.rs  todo_tools.rs  trace.rs
crates/rustykrab-agent/src/orchestrator/: decomposer.rs  executor.rs  mod.rs  pipeline.rs  refiner.rs  synthesizer.rs  verifier.rs
crates/rustykrab-agent/src/rlm/: context_manager.rs  context_store.rs  mod.rs  recursive_call.rs  repl_tools.rs
crates/rustykrab-channels/: Cargo.toml
crates/rustykrab-channels/src/: channel.rs  lib.rs  mcp.rs  mcp_http.rs  signal.rs  slack.rs  telegram.rs  telegram_ext.rs  video.rs  video_ext.rs  webchat.rs
crates/rustykrab-cli/: Cargo.toml  build.rs
crates/rustykrab-cli/src/: chat.rs  computer_backend.rs  main.rs  main_cli.rs  main_helpers.rs  main_init.rs  main_rest.rs  main_server.rs  main_tg.rs  media_delivery.rs  prompt_log.rs  task_queue.rs
crates/rustykrab-core/: Cargo.toml
crates/rustykrab-core/src/: active_tools.rs  agent_def.rs  capability.rs  crypto.rs  error.rs  lib.rs  model.rs  orchestration.rs  prompt_trace.rs  recall.rs  schema_validate.rs  session.rs  todo.rs  tool.rs  types.rs
crates/rustykrab-gateway/: Cargo.toml
crates/rustykrab-gateway/src/: auth.rs  lib.rs  logging.rs  orchestrate.rs  origin.rs  rate_limit.rs  routes.rs  routes_ext.rs  state.rs  telegram_webhook.rs  webchat.rs
crates/rustykrab-gateway/static/: index.html
crates/rustykrab-memory/: Cargo.toml  DEFERRED.md
crates/rustykrab-memory/src/: backend.rs  bm25.rs  chunking.rs  config.rs  embedding.rs  extraction.rs  lib.rs  lifecycle.rs  retrieval.rs  scoring.rs  storage.rs  types.rs  writer.rs
crates/rustykrab-providers/: Cargo.toml
crates/rustykrab-providers/src/: anthropic.rs  backoff.rs  lib.rs  line_buffer.rs  ollama.rs
crates/rustykrab-skills/: Cargo.toml
crates/rustykrab-skills/src/: lib.rs  loader.rs  prompt.rs  skill.rs  skill_md.rs  verify.rs
crates/rustykrab-store/: Cargo.toml
crates/rustykrab-store/src/: chat_map.rs  conversation.rs  jobs.rs  keychain.rs  knowledge_graph.rs  lib.rs  memory.rs  recall_archive.rs  registry.rs  secret.rs  slack_chat_map.rs
crates/rustykrab-tools/: Cargo.toml
crates/rustykrab-tools/src/: agents_list.rs  apply_patch.rs  browser.rs  caldav.rs  canvas.rs  code_execution.rs  computer.rs  computer_backend.rs  credential_read.rs  credential_write.rs  cron.rs  cron_backend.rs  edit.rs  exec.rs  gateway.rs  gateway_backend.rs  gmail.rs  grid.rs  http_request.rs  http_session.rs  image.rs  image_generate.rs  lib.rs  mcp_connector.rs  memory_backend.rs  memory_delete.rs  memory_get.rs  memory_save.rs  memory_search.rs  message.rs  message_backend.rs  net_admin.rs  net_audit.rs  net_device_control.rs  net_discovery.rs  net_scan.rs  nodes.rs  notion.rs  obsidian.rs  pdf.rs  (+26 more)
crates/rustykrab-tools/src/browser/: actions.rs  adaptive.rs  config.rs  fetcher.rs  manager.rs  mod.rs  selectors.rs  snapshot.rs  stealth.rs
docs/: CONTEXT_MEMORY_AUDIT.md
scripts/: codesign.sh  deploy-fastembed.sh  install-discovery-deps.sh  release.sh  setup-secrets.sh
skills/network-recon/: SKILL.md
