[workspace]
resolver = "2"
members = [
    "crates/openclaw-core",
    "crates/openclaw-store",
    "crates/openclaw-gateway",
    "crates/openclaw-agent",
    "crates/openclaw-providers",
    "crates/openclaw-tools",
    "crates/openclaw-channels",
    "crates/openclaw-skills",
    "crates/openclaw-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gcbh/rustycrab"

[workspace.dependencies]
# Async runtime & networking
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Storage
sled = "0.34"

# Embedding static assets
rust-embed = "8"

# Async trait support
async-trait = "0.1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
security-framework = "3"
zeroize = { version = "1", features = ["zeroize_derive"] }

# Browser automation (Chrome DevTools Protocol)
chromiumoxide = { version = "0.9", default-features = false }

# Email (IMAP + SMTP)
imap = "2"
native-tls = "0.2"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder"] }
mail-parser = "0.9"

# Internal crates
openclaw-core = { path = "crates/openclaw-core" }
openclaw-store = { path = "crates/openclaw-store" }
openclaw-gateway = { path = "crates/openclaw-gateway" }
openclaw-agent = { path = "crates/openclaw-agent" }
openclaw-providers = { path = "crates/openclaw-providers" }
openclaw-tools = { path = "crates/openclaw-tools" }
openclaw-channels = { path = "crates/openclaw-channels" }
openclaw-skills = { path = "crates/openclaw-skills" }
openclaw-cli = { path = "crates/openclaw-cli" }
