[workspace]
resolver = "2"
members = [
    "crates/rustykrab-core",
    "crates/rustykrab-store",
    "crates/rustykrab-gateway",
    "crates/rustykrab-agent",
    "crates/rustykrab-providers",
    "crates/rustykrab-tools",
    "crates/rustykrab-channels",
    "crates/rustykrab-skills",
    "crates/rustykrab-cli",
    "crates/rustykrab-memory",
]

[workspace.package]
version = "2.6.1"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/gcbh/rustycrab"

[workspace.dependencies]
# Async runtime & networking
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "query"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Embedding static assets
rust-embed = "8"

# Async trait support
async-trait = "0.1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
croner = "3"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = "0.9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
security-framework = { version = "3", features = ["OSX_10_15"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
secrecy = "0.10"
keyring = { version = "3", default-features = false, features = ["linux-native"] }

# Browser automation (Chrome DevTools Protocol)
chromiumoxide = "0.9"

# Email (IMAP + SMTP)
imap = "2"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls", "rustls-native-certs", "aws-lc-rs", "builder"] }
mail-parser = "0.9"

# Futures combinators
futures = "0.3"

# Regular expressions
regex = "1"

# System-level interfaces (resource limits, process isolation)
libc = "0.2"

# TLS (unified on rustls — no OpenSSL dependency)
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"

# Internal crates
rustykrab-core = { path = "crates/rustykrab-core" }
rustykrab-store = { path = "crates/rustykrab-store" }
rustykrab-gateway = { path = "crates/rustykrab-gateway" }
rustykrab-agent = { path = "crates/rustykrab-agent" }
rustykrab-providers = { path = "crates/rustykrab-providers" }
rustykrab-tools = { path = "crates/rustykrab-tools" }
rustykrab-channels = { path = "crates/rustykrab-channels" }
rustykrab-skills = { path = "crates/rustykrab-skills" }
rustykrab-cli = { path = "crates/rustykrab-cli" }
rustykrab-memory = { path = "crates/rustykrab-memory" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
