[package]
name = "openclaw-cli"
description = "CLI entrypoint and daemon management for OpenClaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
openclaw-store.workspace = true
openclaw-gateway.workspace = true
openclaw-agent.workspace = true
openclaw-tools.workspace = true
openclaw-channels.workspace = true
openclaw-skills.workspace = true
openclaw-providers.workspace = true
axum.workspace = true
chrono.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dirs = "6"
toml.workspace = true
