[package]
name = "openclaw-gateway"
description = "Axum-based HTTP/WebSocket gateway for OpenClaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
openclaw-store.workspace = true
openclaw-agent.workspace = true
openclaw-channels.workspace = true
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
rust-embed.workspace = true
mime_guess = "2"
rand.workspace = true
hex.workspace = true
