[package]
name = "openclaw-gateway"
description = "Axum-based HTTP gateway for OpenClaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
openclaw-store.workspace = true
openclaw-agent.workspace = true
openclaw-channels.workspace = true
openclaw-skills.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rust-embed.workspace = true
mime_guess = "2"
rand.workspace = true
hex.workspace = true
