[package]
name = "openclaw-providers"
description = "Model provider implementations (Anthropic Claude, Ollama/local)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
