[package]
name = "openclaw-skills"
description = "Composable skill definitions for OpenClaw agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
anyhow.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
hex.workspace = true
