[package]
name = "openclaw-store"
description = "Sled-based persistent storage for OpenClaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
sled.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
