[package]
name = "openclaw-tools"
description = "Built-in tool implementations for OpenClaw agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
openclaw-store.workspace = true
async-trait.workspace = true
reqwest = { workspace = true, features = ["cookies"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
base64.workspace = true
uuid.workspace = true
url = "2"
imap.workspace = true
imap-proto = "0.10"
native-tls.workspace = true
lettre.workspace = true
mail-parser.workspace = true

[dev-dependencies]
tempfile = "3"
