[package]
name = "rustykrab-core"
description = "Shared types, error types, and trait definitions for RustyKrab"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Deliberately not the workspace `full` feature set: this crate only uses
# `tokio::task_local!` (rt) and `#[tokio::test]` (macros). Workspace feature
# unification leaves the final binary unchanged; this keeps the leaf crate's
# dependency graph honest and standalone builds fast.
tokio = { version = "1", features = ["rt", "macros"] }
uuid.workspace = true
