[package]
name = "rustykrab-memory"
description = "Production agent memory: verbatim storage, hybrid retrieval, value-driven lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
fastembed = ["dep:fastembed"]

[dependencies]
rustykrab-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
thiserror.workspace = true
regex = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
# Pinned to 4.9.1 (which uses ort =2.0.0-rc.9) for glibc 2.35 / Ubuntu
# 22.04 compatibility. fastembed 5.x and ort >= rc.11 ship prebuilt
# ONNX Runtime archives that reference glibc 2.38+ symbols
# (__isoc23_strtol et al.), so they fail to link on older LTS distros.
# Re-evaluate once https://github.com/pykeio/ort/issues/523 is resolved
# upstream.
fastembed = { version = "=4.9.1", optional = true, default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }

[dev-dependencies]
tempfile = "3"
