[package]
name = "rustykrab-memory"
description = "Production agent memory: verbatim storage, hybrid retrieval, value-driven lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
fastembed = ["dep:fastembed", "dep:openssl-sys"]

[dependencies]
rustykrab-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
thiserror.workspace = true
regex = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
# Pinned to 5.8.0 — the last fastembed release pinning ort =2.0.0-rc.10,
# which is both glibc-2.35 / Ubuntu 22.04 compatible and still served
# from the active cdn.pyke.io. fastembed 5.8.1 already bumped to ort
# =2.0.0-rc.11 (#220). ort rc.11+ ship prebuilts referencing glibc
# 2.38+ symbols (__isoc23_strtol et al.) that fail to link on older
# LTS distros (https://github.com/pykeio/ort/issues/523). The older
# fastembed 4.x line uses ort rc.9, whose tarball lives on
# parcel.pyke.io and no longer resolves at download time.
#
# `ort-download-binaries` pulls native-tls into the ort-sys build
# script via ureq. ort rc.10 hardcodes native-tls for the download
# (the rustls switch only landed later, around ort rc.12). This is
# build-time only — native-tls is invoked once to fetch the prebuilt
# tarball and never links into the final binary, so the runtime TLS
# posture (rustls everywhere via lettre/reqwest, per 7054b18) is
# unaffected. Re-evaluate once pykeio/ort#523 is resolved upstream.
fastembed = { version = "=5.8.0", optional = true, default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
# Cargo unifies features across the dep graph, so enabling `vendored` here
# forces the openssl-sys pulled in by ureq → native-tls (above) to build
# bundled OpenSSL instead of probing the host's headers. Without this,
# cargo-zigbuild's CC wrapper for the glibc 2.35 cross build can't locate
# Ubuntu's multiarch `openssl/opensslconf.h` and the build fails. Gated
# behind the `fastembed` feature so we only pay the build cost when the
# transitive openssl-sys is actually in the graph.
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }

[dev-dependencies]
tempfile = "3"
