[package]
name = "rustykrab-providers"
description = "Model provider implementations (Anthropic Claude, Ollama/local)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustykrab-core.workspace = true
async-trait.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
secrecy.workspace = true
