[package]
name = "rustykrab-skills"
description = "Composable skill definitions for RustyKrab agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustykrab-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
anyhow.workspace = true
ed25519-dalek.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }
hex.workspace = true
