[package]
name = "rustykrab-store"
description = "SQLite-based persistent storage for RustyKrab"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustykrab-core.workspace = true
rusqlite = { version = "0.34", features = ["bundled"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
croner.workspace = true
tracing.workspace = true
hmac.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
hex.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[target.'cfg(not(target_os = "macos"))'.dependencies]
keyring.workspace = true
