[package]
name = "rustykrab-tools"
description = "Built-in tool implementations for RustyKrab agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustykrab-core.workspace = true
rustykrab-store.workspace = true
rustykrab-channels.workspace = true
rustykrab-skills.workspace = true
async-trait.workspace = true
reqwest = { workspace = true, features = ["cookies"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true
chromiumoxide.workspace = true
tokio-stream.workspace = true
url = "2"
regex.workspace = true
scraper = { version = "0.26", default-features = false }
async-imap = { workspace = true }
imap-proto = "0.16"
tokio-rustls = "0.26"
futures.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
lettre.workspace = true
mail-parser.workspace = true
libc.workspace = true
# Screenshot post-processing (coordinate-grid overlay). PNG codec only —
# default features pulled in to keep the dependency footprint small.
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"
